kubernetes/externalsvc.yml
kind: Service
apiVersion: v1
metadata:
  name: argocd-external-service
  namespace: default
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
