kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pythonsvc
  name: python-app-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: frontend 
  type: NodePort
